# nlweb

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  cargar_datos.py  docker-compose.tunnel.yml  docker-compose.yml  feed.xml  pyproject.toml  server.py  start_services.bat
frontend/: app.js  index.html  style.css
scripts/: install_dependencies.bat  load_data.bat
